# first_project_template

./: DESCRIPTION.md  README.md  config.yaml  main.py  pyproject.toml
example_project1/src/: get_data.py  run_backtest.py  strategy.py
first_project_template/src/: utils.py
