[tool.poetry]
name = "first_project_template"
version = "0.1.0"
description = "Project 1 example"
authors = ["Евсин Игорь Русланович <igor.evsin@squants.education>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.26.4"
pandas = "^2.2.0"
backtesting = "^0.6.5"
yfinance = "^0.2.66"
fastparquet = "^2024.11.0"
joblib = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
